[lworld] C2 should not replace redundant scalar replaceable allocations

XMLWordPrintable

      TestBasicFunctionality fails with assert "correct memory chain":

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (t:/workspace/open/src/hotspot/share/opto/memnode.cpp:225), pid=12468, tid=18108
      # assert(phase->C->get_alias_index(t) == phase->C->get_alias_index(t_adr)) failed: correct memory chain
      #
      # JRE version: Java(TM) SE Runtime Environment (16.0+1) (fastdebug build 16-valhalla+1-36)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-valhalla+1-36, mixed mode, sharing, tiered, compressed oops, g1 gc, windows-amd64)
      # Core dump will be written. Default location: T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_tier1_compiler_3\scratch\4\hs_err_pid12468.mdmp
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #

      Current CompileTask:
      C2: 102543 313 b 4 compiler.valhalla.inlinetypes.TestBasicFunctionality::test40 (49 bytes)

      Stack: [0x0000006a5a200000,0x0000006a5a300000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xabcea1] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:369)
      V [jvm.dll+0xcf5436] VMError::report+0xf86 (vmError.cpp:732)
      V [jvm.dll+0xcf6c9e] VMError::report_and_die+0x7ee (vmError.cpp:1548)
      V [jvm.dll+0xcf7354] VMError::report_and_die+0x64 (vmError.cpp:1341)
      V [jvm.dll+0x45f447] report_vm_error+0x117 (debug.cpp:264)
      V [jvm.dll+0xa19dff] MemNode::optimize_memory_chain+0x4df (memnode.cpp:225)
      V [jvm.dll+0xa07caf] LoadNode::Ideal+0x34f (memnode.cpp:1665)
      V [jvm.dll+0xb07f0f] PhaseIterGVN::transform_old+0xcf (phaseX.cpp:1227)
      V [jvm.dll+0xb04fb4] PhaseIterGVN::optimize+0x284 (phaseX.cpp:1174)
      V [jvm.dll+0x937b7b] PhaseIdealLoop::build_and_optimize+0x129b (loopnode.cpp:3311)
      V [jvm.dll+0x423f3f] PhaseIdealLoop::optimize+0xcf (loopnode.hpp:1029)
      V [jvm.dll+0x4160f1] Compile::Optimize+0xa01 (compile.cpp:2543)
      V [jvm.dll+0x4130fb] Compile::Compile+0xf7b (compile.cpp:737)
      V [jvm.dll+0x340407] C2Compiler::compile_method+0x117 (c2compiler.cpp:115)
      V [jvm.dll+0x42ea99] CompileBroker::invoke_compiler_on_method+0x839 (compileBroker.cpp:2223)
      V [jvm.dll+0x42c6d2] CompileBroker::compiler_thread_loop+0x2f2 (compileBroker.cpp:1900)
      V [jvm.dll+0xc8d404] JavaThread::run+0x244 (thread.cpp:1948)
      V [jvm.dll+0xc837d4] Thread::call_run+0x1b4 (thread.cpp:399)
      V [jvm.dll+0xabb50e] thread_native_entry+0x10e (os_windows.cpp:463)
      C [ucrtbase.dll+0x1fb80]
      C [KERNEL32.DLL+0x84d4]
      C [ntdll.dll+0x6e871]

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: