8250962: [lworld] C2 should not replace redundant scalar replaceable allocations